fix alignment to the left

--- a/boilerplate/style.css
+++ b/boilerplate/style.css
@@ -11,7 +11,8 @@ h1 {
 .container {
     display: block;
     max-width: 600px;
-    margin: 0 auto;
+    margin: 0;
+    position: relative;
     padding: 20px;
 }
 
